02. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- qmake project file order changed (workaround for qmake bug)
	- development/release information in info dialog
	- unit translation fixes
	- use better description on search button at find dialog

01. Feb 2011 Christoph Thielecke <crissi99@gmx.de>
	- csv import added (Advanced File Organizer)

31. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- csv import added (VisualCD)
	- file filter at import dialog fixed
	- csv import added (VVV (Virtual Volumes View))

30. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- remember start/end date in find dialog
	- double deletion fixed
	- support for category (catalog, media, files/dirs) added
	- comment at csv import fixed
	- gtktalog xml import fixed

29. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- remember last search pattern added
	- searching min size/max size added 

28. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- option for displaying progressed file at scanning directory tree added
	- remember last media type in adddialog
	- ok/cancel button moved to buttom in config dialog
	- busydialog auto resize to optimal size made
	- displaying wait text at scanning added

27. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- progressbar at busydialog on loading/parsing file added
	- display more informative text in busydialog on loading/parsing file
	- made unit in node sizedialog translateable
	- q3textstream by qtextstream replaced
	- q3textbrowser by qtextbrowser replaced
	- reading catalog file enhanced
	- saving special chars fixed
	- option for saving catalogs always in UTF8 added (disabling keeps old encoding)
	- searching fixed

26. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- support for importing comment and category at Kat-CeDe and Disclib added
	- progressbar at csv import fixed
	- q3textstream replaced by qtextstream at import
	- q3progressdialog replaced by qprogressdialog at import
	- language selector at preferencesdialog at osx added
